Modifying Largest3Numbers.java