@@ -1,9 +1,6 @@
 package setsAndMapsAdvancedLab;
 
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.List;
-import java.util.Scanner;
+import java.util.*;
 import java.util.stream.Collectors;
 
 public class Largest3Numbers {
@@ -11,24 +8,20 @@ public class Largest3Numbers {
         Scanner scanner = new Scanner(System.in);
 
         List<Integer> numbers = Arrays.stream(scanner.nextLine().split("\\s+"))
-                .map(Integer::parseInt).collect(Collectors.toList()).stream()
-                .sorted(Collections.reverseOrder()).toList();
+                .map(Integer::parseInt).sorted(Comparator.reverseOrder())
+                .collect(Collectors.toList());
 
         printNumbers(numbers);
     }
 
     private static void printNumbers(List<Integer> numbers) {
-        int size = numbers.size();
-        if (size > 3) {
-            for (int number : numbers) {
-                if (size == 3) {
-                    break;
-                }
-                System.out.print(number + " ");
-                size--;
+        if (numbers.size() > 3) {
+            for (int i = 0; i < 3; i++) {
+                System.out.print(numbers.get(i) + " ");
             }
         } else {
             numbers.forEach(number -> System.out.print(number + " "));
         }
     }
+
 }
